Fix the screen when editing the app on mobile

--- a/packages/studio/pages/apps/app/edit/index.module.css
+++ b/packages/studio/pages/apps/app/edit/index.module.css
@@ -8,6 +8,7 @@
 
 .editorForm {
   flex: 1 1 auto;
+  min-height: 50%;
 }
 
 .editor {
